--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <div class="site-container-index">
       <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
-          <a href="index.html" class="brand"
+          <a href="" class="brand"
             ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
           <nav>
             <ul class="nav_main">
               <div class="nav__animation">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="projects.html">Projets</a></li>
+                <li><a href="">Accueil</a></li>
+                <li><a href="about/">À propos</a></li>
+                <li><a href="projects/">Projets</a></li>
               </div>
               <li>
-                <a href="contact.html"
+                <a href="contact/"
                   ><img src="svg/letter.svg" alt="Logo de contact"
                 /></a>
               </li>
@@ -72,7 +72,7 @@
               <h2>Intégratice multimédia</h2>
             </div>
 
-            <a href="projects.html" class="button">Mes projets</a>
+            <a href="/projects/" class="button">Mes projets</a>
           </div>
         </div>
       </section>
