--- a/projects/lumifest/index.html
+++ b/projects/lumifest/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mia dans l'autobus</title>
+    <title>Lumifest</title>
 
-    <link rel="icon" type="image/x-icon" href="svg/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="../../svg/favicon.svg" />
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../../css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,27 +21,27 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module" src="js/Main.js" defer></script>
+    <script type="module" src="../../js/Main.js" defer></script>
   </head>
 
   <body>
     <div class="site-container">
       <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
-          <a href="index.html" class="brand"
-            ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
+          <a href="../../" class="brand"
+            ><img src="../../svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
           <nav>
             <ul class="nav_main">
               <div class="nav__animation">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="projects.html">Projets</a></li>
+                <li><a href="../../">Accueil</a></li>
+                <li><a href="../../about/">À propos</a></li>
+                <li><a href="../../projects/">Projets</a></li>
               </div>
               <li>
-                <a href="contact.html"
-                  ><img src="svg/letter.svg" alt="Logo de contact"
+                <a href="../../contact/"
+                  ><img src="../../svg/letter.svg" alt="Logo de contact"
                 /></a>
               </li>
             </ul>
@@ -54,11 +54,11 @@
       </div>
 
       <section class="project__hero">
-        <h2>Animation 3D</h2>
-        <h1 class="project__title">Mia dans l’autobus</h1>
+        <h2>Montage vidéo</h2>
+        <h1 class="project__title">Lumifest</h1>
         <div class="hero__bgi">
           <img
-            src="images/projet1-cover.jpg"
+            src="../../images/projet5-cover.jpg"
             alt="Couverture du premier projet"
           />
         </div>
@@ -66,7 +66,7 @@
 
       <script>
         function toPage() {
-          window.location = "projects.html#slide1";
+          window.location = "../../projects/#slide5";
         }
         function backToProjects() {
           //redirect after 3 seconds for i min pass 60000
@@ -79,29 +79,29 @@
         <div class="wrapper">
           <h3>Description</h3>
           <p>
-            Mia dans l’autobus est mon projet final du cours d’animation 3D. Je
-            devais créer une courte animation 3D scénarisée. J’ai dessiné,
-            modélisé et animé le personnage principal de cette vidéo, ainsi que
-            tout le décor l’entourant.
+            Ce projet fait dans le cadre de mon cours de montage vidéo devait
+            être animé ou monté au rythme d’une musique de notre choix. Ces
+            vidéos étaient, par la suite, envoyées aux organisateurs du Lumifest
+            2022. Mon animation fut choisie pour être projetée lors de cet
+            événement.
           </p>
           <div class="gallery">
             <img
-              src="images/projet1-description1.png"
+              src="../../images/projet5-description1.png"
               alt="Croquis du personnage principal"
-              class="large__img"
             />
             <img
-              src="images/projet1-description2.png"
+              src="../../images/projet5-description2.png"
               alt="Tenu d'été du personnage principal"
               class="small__img"
             />
             <img
-              src="images/projet1-description3.png"
+              src="../../images/projet5-description3.png"
               alt="Tenu d'automne du personnage principal"
               class="small__img"
             />
             <img
-              src="images/projet1-description4.png"
+              src="../../images/projet5-description4.png"
               alt="Tenu d'hiver du personnage principal"
               class="small__img"
             />
@@ -110,47 +110,34 @@
       </section>
     </div>
 
-    <div class="gallery__display display__project1"></div>
+    <div class="gallery__display display__project5"></div>
 
     <div class="site-container">
       <section class="project__skills">
         <div class="wrapper skills_medias">
-          <img src="images/projet1-skills.jpg" alt="Image du projet Blender" />
+          <img
+            src="../../images/projet5-skills.png"
+            alt="Image du projet Blender"
+          />
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
-              Ce projet m’a amené à explorer les armatures et l’animation de
-              celle-ci. Le squelette manipule de façon organique le modèle de
-              mon personnage principal, et de simples objets vides contrôlent le
-              mouvement des yeux. Les pupilles et les sourcils bougent grâce à
-              des <span style="white-space: nowrap">« Shape Keys ».</span> Ce
-              fut l’une de mes premières animations 3D et j’en ai beaucoup
-              appris.
+              La création de cette animation m’a fait découvrir plusieurs
+              méthodes de travail intéressantes sur After Effects. Les calques
+              d’effets furent une belle découverte, permettant d’ajouter du
+              style aisément à nos compositions. Faire l’animation des bulles
+              dynamiques était aussi très amusant et formatif.
             </p>
             <div class="softwares skills_softwares">
               <h3>Logiciels</h3>
               <ul>
                 <li>
-                  <a href="https://www.blender.org/" target="_blank"
-                    ><img
-                      src="svg/software-blender.svg"
-                      alt="Logo du logiciel Blender"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://procreate.art/" target="_blank"
-                    ><img
-                      src="svg/software-procreate.svg"
-                      alt="Logo du logiciel Procreate"
-                  /></a>
-                </li>
-                <li>
                   <a
-                    href="https://www.adobe.com/ca_fr/products/photoshop.html"
+                    href="https://www.adobe.com/ca_fr/products/aftereffects.html"
                     target="_blank"
                     ><img
-                      src="svg/software-photoshop.svg"
-                      alt="Logo du logiciel Photoshop"
+                      src="../../svg/software-aftereffect.svg"
+                      alt="Logo du logiciel After Effects"
                   /></a>
                 </li>
               </ul>
@@ -162,7 +149,9 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube.com/embed/W3Mt_KUi2LE"
+        width="560"
+        height="315"
+        src="https://www.youtube-nocookie.com/embed/5rJ92sN98Lk"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -174,10 +163,8 @@
       <section class="credits">
         <div class="wrapper">
           <h3>Crédits</h3>
-          <p>
-            Alanis Bédard | Cinématographie, modélisation, textures et
-            animations
-          </p>
+          <p>Alanis Bédard | Animation et création du visuel</p>
+          <p>Komiku | Musique : Hélice's Theme, 2019</p>
         </div>
       </section>
 
@@ -191,7 +178,7 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-linkedin.svg"
+                  src="../../svg/social-linkedin.svg"
                   alt="Le LinkedIn d'Alanis Bédard"
               /></a>
             </li>
@@ -199,7 +186,7 @@
               <a href="https://www.behance.net/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-behance.svg"
+                  src="../../svg/social-behance.svg"
                   alt="Le Behance d'Alanis Bédard"
               /></a>
             </li>
@@ -209,7 +196,7 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-instagram.svg"
+                  src="../../svg/social-instagram.svg"
                   alt="L'Instagram d'Alanis Bédard"
               /></a>
             </li>
@@ -219,7 +206,7 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-youtube.svg"
+                  src="../../svg/social-youtube.svg"
                   alt="La chaîne Youtube d'Alanis Bédard"
               /></a>
             </li>
@@ -227,7 +214,7 @@
               <a href="https://github.com/AlanisBedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-github.svg"
+                  src="../../svg/social-github.svg"
                   alt="Le GitHub d'Alanis Bédard"
               /></a>
             </li>
@@ -235,7 +222,7 @@
               <a href="https://sketchfab.com/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-sketchfab.svg"
+                  src="../../svg/social-sketchfab.svg"
                   alt="Le Sketchfab d'Alanis Bédard"
               /></a>
             </li>
