--- a/about/index.html
+++ b/about/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>À propos</title>
 
-    <link rel="icon" type="image/x-icon" href="svg/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="../svg/favicon.svg" />
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,27 +21,27 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module" src="js/Main.js" defer></script>
+    <script type="module" src=".../js/Main.js" defer></script>
   </head>
 
   <body>
     <div class="site-container">
       <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
-          <a href="index.html" class="brand"
-            ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
+          <a href="../" class="brand"
+            ><img src="../svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
           <nav>
             <ul class="nav_main">
               <div class="nav__animation">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="projects.html">Projets</a></li>
+                <li><a href="../">Accueil</a></li>
+                <li><a href="">À propos</a></li>
+                <li><a href="../projects">Projets</a></li>
               </div>
               <li>
-                <a href="contact.html"
-                  ><img src="svg/letter.svg" alt="Logo de contact"
+                <a href="../contact"
+                  ><img src="../svg/letter.svg" alt="Logo de contact"
                 /></a>
               </li>
             </ul>
@@ -53,7 +53,7 @@
         <div class="wrapper about__hero__content">
           <div class="about__hero">
             <img
-              src="images/about-alanisbedard.png"
+              src="../images/about-alanisbedard.png"
               alt="Photo d'Alanis Bédard"
               class="about__picture"
             />
@@ -61,7 +61,7 @@
               <h1>
                 Alanis Bédard
                 <img
-                  src="svg/signature.svg"
+                  src="../svg/signature.svg"
                   alt="Signature d'Alanis Bédard"
                   class="about__signature"
                 />
@@ -99,35 +99,35 @@
               <li>
                 <a href="https://www.blender.org/" target="_blank"
                   ><img
-                    src="svg/software-blender.svg"
+                    src="../svg/software-blender.svg"
                     alt="Logo du logiciel Blender"
                 /></a>
               </li>
               <li>
                 <a href="https://www.figma.com/fr/" target="_blank"
                   ><img
-                    src="svg/software-figma.svg"
+                    src="../svg/software-figma.svg"
                     alt="Logo du logiciel Figma"
                 /></a>
               </li>
               <li>
                 <a href="https://procreate.art/" target="_blank"
                   ><img
-                    src="svg/software-procreate.svg"
+                    src="../svg/software-procreate.svg"
                     alt="Logo du logiciel Procreate"
                 /></a>
               </li>
               <li>
                 <a href="https://code.visualstudio.com/" target="_blank"
                   ><img
-                    src="svg/software-vscode.svg"
+                    src="../svg/software-vscode.svg"
                     alt="Logo du logiciel Visual Studio Code"
                 /></a>
               </li>
               <li>
                 <a href="https://www.adobe.com/ca_fr/" target="_blank"
                   ><img
-                    src="svg/software-adobecreative.svg"
+                    src="../svg/software-adobecreative.svg"
                     alt="Logo de la Suite Adobe"
                 /></a>
               </li>
@@ -187,11 +187,11 @@
       <section class="references">
         <div class="wrapper references__content">
           <div class="buttons">
-            <a href="pdf/alanisbedard_cv.pdf" class="button" download
+            <a href="../pdf/alanisbedard_cv.pdf" class="button" download
               >Télécharger mon CV</a
             >
             <a
-              href="pdf/alanisbedard_recommandation.pdf"
+              href="../pdf/alanisbedard_recommandation.pdf"
               class="button"
               download
               >Télécharger ma lettre de recommandation</a
@@ -226,7 +226,7 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-linkedin.svg"
+                  src="../svg/social-linkedin.svg"
                   alt="Le LinkedIn d'Alanis Bédard"
               /></a>
             </li>
@@ -234,7 +234,7 @@
               <a href="https://www.behance.net/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-behance.svg"
+                  src="../svg/social-behance.svg"
                   alt="Le Behance d'Alanis Bédard"
               /></a>
             </li>
@@ -244,7 +244,7 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-instagram.svg"
+                  src="../svg/social-instagram.svg"
                   alt="L'Instagram d'Alanis Bédard"
               /></a>
             </li>
@@ -254,7 +254,7 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-youtube.svg"
+                  src="../svg/social-youtube.svg"
                   alt="La chaîne Youtube d'Alanis Bédard"
               /></a>
             </li>
@@ -262,7 +262,7 @@
               <a href="https://github.com/AlanisBedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-github.svg"
+                  src="../svg/social-github.svg"
                   alt="Le GitHub d'Alanis Bédard"
               /></a>
             </li>
@@ -270,7 +270,7 @@
               <a href="https://sketchfab.com/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-sketchfab.svg"
+                  src="../svg/social-sketchfab.svg"
                   alt="Le Sketchfab d'Alanis Bédard"
               /></a>
             </li>
