--- a/projects/loasis/index.html
+++ b/projects/loasis/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lumifest</title>
+    <title>L’oasis</title>
 
-    <link rel="icon" type="image/x-icon" href="svg/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="../../svg/favicon.svg" />
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../../css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,27 +21,27 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module" src="js/Main.js" defer></script>
+    <script type="module" src="../../js/Main.js" defer></script>
   </head>
 
   <body>
     <div class="site-container">
       <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
-          <a href="index.html" class="brand"
-            ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
+          <a href="../../" class="brand"
+            ><img src="../../svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
           <nav>
             <ul class="nav_main">
               <div class="nav__animation">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="projects.html">Projets</a></li>
+                <li><a href="../../">Accueil</a></li>
+                <li><a href="../../about/">À propos</a></li>
+                <li><a href="../../projects/">Projets</a></li>
               </div>
               <li>
-                <a href="contact.html"
-                  ><img src="svg/letter.svg" alt="Logo de contact"
+                <a href="../../contact/"
+                  ><img src="../../svg/letter.svg" alt="Logo de contact"
                 /></a>
               </li>
             </ul>
@@ -54,11 +54,11 @@
       </div>
 
       <section class="project__hero">
-        <h2>Montage vidéo</h2>
-        <h1 class="project__title">Lumifest</h1>
+        <h2>Animation Multimédia</h2>
+        <h1 class="project__title">L’oasis</h1>
         <div class="hero__bgi">
           <img
-            src="images/projet5-cover.jpg"
+            src="../../images/projet4-cover.jpg"
             alt="Couverture du premier projet"
           />
         </div>
@@ -66,7 +66,7 @@
 
       <script>
         function toPage() {
-          window.location = "projects.html#slide5";
+          window.location = "../../projects/#slide4";
         }
         function backToProjects() {
           //redirect after 3 seconds for i min pass 60000
@@ -79,29 +79,29 @@
         <div class="wrapper">
           <h3>Description</h3>
           <p>
-            Ce projet fait dans le cadre de mon cours de montage vidéo devait
-            être animé ou monté au rythme d’une musique de notre choix. Ces
-            vidéos étaient, par la suite, envoyées aux organisateurs du Lumifest
-            2022. Mon animation fut choisie pour être projetée lors de cet
-            événement.
+            Ce projet fut une belle entrée en matière dans le monde de la
+            cinématographie. En utilisant de multiples modélisations créées par
+            des artistes 3D, j’ai pu mettre en scène ma vision. Mon but étant de
+            créer un scénario simple pouvant être interprété de différentes
+            façons, tout en ayant un visuel agréable.
           </p>
           <div class="gallery">
             <img
-              src="images/projet5-description1.png"
+              src="../../images/projet4-description1.png"
               alt="Croquis du personnage principal"
             />
             <img
-              src="images/projet5-description2.png"
+              src="../../images/projet4-description2.png"
               alt="Tenu d'été du personnage principal"
               class="small__img"
             />
             <img
-              src="images/projet5-description3.png"
+              src="../../images/projet4-description3.png"
               alt="Tenu d'automne du personnage principal"
               class="small__img"
             />
             <img
-              src="images/projet5-description4.png"
+              src="../../images/projet4-description4.png"
               alt="Tenu d'hiver du personnage principal"
               class="small__img"
             />
@@ -110,31 +110,43 @@
       </section>
     </div>
 
-    <div class="gallery__display display__project5"></div>
+    <div class="gallery__display display__project4"></div>
 
     <div class="site-container">
       <section class="project__skills">
         <div class="wrapper skills_medias">
-          <img src="images/projet5-skills.png" alt="Image du projet Blender" />
+          <img
+            src="../../images/projet4-skills.png"
+            alt="Image du projet Blender"
+          />
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
-              La création de cette animation m’a fait découvrir plusieurs
-              méthodes de travail intéressantes sur After Effects. Les calques
-              d’effets furent une belle découverte, permettant d’ajouter du
-              style aisément à nos compositions. Faire l’animation des bulles
-              dynamiques était aussi très amusant et formatif.
+              Avec l’aide de Mixamo, j’ai pu découvrir l’animation non-linéaire
+              sur Blender. Avec cet outil, il est facile de créer des
+              transitions simples entre des animations enregistrées, ce qui
+              facilite la tâche de scénarisation. J’ai aussi eu le plaisir
+              d’animer et d'alterner entre plusieurs caméras selon des chemins
+              prédéterminés. J’ai aussi appris beaucoup sur l'éditeur Shader
+              après la création de plusieurs matériaux comme l’eau de l’Oasis.
             </p>
             <div class="softwares skills_softwares">
               <h3>Logiciels</h3>
               <ul>
                 <li>
+                  <a href="https://www.blender.org/" target="_blank"
+                    ><img
+                      src="../../svg/software-blender.svg"
+                      alt="Logo du logiciel Blender"
+                  /></a>
+                </li>
+                <li>
                   <a
-                    href="https://www.adobe.com/ca_fr/products/aftereffects.html"
+                    href="https://www.adobe.com/ca_fr/products/photoshop.html"
                     target="_blank"
                     ><img
-                      src="svg/software-aftereffect.svg"
-                      alt="Logo du logiciel After Effects"
+                      src="../../svg/software-photoshop.svg"
+                      alt="Logo du logiciel Photoshop"
                   /></a>
                 </li>
               </ul>
@@ -146,9 +158,7 @@
 
     <section class="project__final">
       <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube-nocookie.com/embed/5rJ92sN98Lk"
+        src="https://www.youtube-nocookie.com/embed/lpHiz5E6Txg"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -160,8 +170,30 @@
       <section class="credits">
         <div class="wrapper">
           <h3>Crédits</h3>
-          <p>Alanis Bédard | Animation et création du visuel</p>
-          <p>Komiku | Musique : Hélice's Theme, 2019</p>
+          <p>
+            Alanis Bédard | Cinématographie, modélisation du sable, textures et
+            animations
+          </p>
+          <p>
+            jakobscheidt | Gameready Character,
+            <a href="https://skfb.ly/6SEwJ">https://skfb.ly/6SEwJ</a>
+          </p>
+          <p>
+            jakobscheidt | Winter Girl,
+            <a href="https://skfb.ly/6XZ9M">https://skfb.ly/6XZ9M</a>
+          </p>
+          <p>
+            Máté Varga | The Carrier,
+            <a href="https://skfb.ly/oroD7">https://skfb.ly/oroD7 </a>
+          </p>
+          <p>
+            Erroratten | Desert - Rocks - Stones - Pack,
+            <a href="https://skfb.ly/op9zQ">https://skfb.ly/op9zQ</a>
+          </p>
+          <p>
+            Parelaxel | Stylized Palm tree set,
+            <a href="https://skfb.ly/6Y98A">https://skfb.ly/6Y98A</a>
+          </p>
         </div>
       </section>
 
@@ -175,7 +207,7 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-linkedin.svg"
+                  src="../../svg/social-linkedin.svg"
                   alt="Le LinkedIn d'Alanis Bédard"
               /></a>
             </li>
@@ -183,7 +215,7 @@
               <a href="https://www.behance.net/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-behance.svg"
+                  src="../../svg/social-behance.svg"
                   alt="Le Behance d'Alanis Bédard"
               /></a>
             </li>
@@ -193,7 +225,7 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-instagram.svg"
+                  src="../../svg/social-instagram.svg"
                   alt="L'Instagram d'Alanis Bédard"
               /></a>
             </li>
@@ -203,7 +235,7 @@
                 target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-youtube.svg"
+                  src="../../svg/social-youtube.svg"
                   alt="La chaîne Youtube d'Alanis Bédard"
               /></a>
             </li>
@@ -211,7 +243,7 @@
               <a href="https://github.com/AlanisBedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-github.svg"
+                  src="../../svg/social-github.svg"
                   alt="Le GitHub d'Alanis Bédard"
               /></a>
             </li>
@@ -219,7 +251,7 @@
               <a href="https://sketchfab.com/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
-                  src="svg/social-sketchfab.svg"
+                  src="../../svg/social-sketchfab.svg"
                   alt="Le Sketchfab d'Alanis Bédard"
               /></a>
             </li>
